--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </nav>
     
     </header>
+      <div class="container">
     <section aria-label="seção currículo dowload Eliane Ramos" class="section-div">
         <div>
             <h2> Olá, prazer. Eu sou...</h2>
@@ -343,5 +344,7 @@
 </footer>
     </div>
     </section>
+      </div>
+</footer>
 </body>
 </html>
