--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 </head>
 
 <body>
-<div class="container">
 
     <header>
+<div class="container">
 
         <h1>Dev <span>Eliane Barbosa</span></h1>
         <nav>
@@ -65,8 +65,10 @@
         </nav>
             </div>
     </header>
+<body>
+<div class="container">
+
     <section aria-label="seção currículo dowload Eliane Ramos" class="section-div">
-                  <div class="container">
         <div>
             <h2> Olá, prazer. Eu sou...</h2>
             <h2 class="digitando">Eliane Ramos Barbosa</h2>
