--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 <p><i class="fa-solid fa-envelope"></i>Email: engproducao.eliane@gmail.com</p>
              </div>
         </div>
+        </div>
         </article>
     </main>
     <!------------------------------------------------------->
@@ -173,7 +174,9 @@
                   
 </section>
           </div>
-<!----------------------------------------------------------------------->    
+<!----------------------------------------------------------------------->  
+              <div class="container">
+
                       <div class="my_resume">
 <div class="sobre_titulo">
 
@@ -191,9 +194,8 @@
         </div>
         </div>
     </div>
-</div>
     <script src="script.js"></script>
-
+</div>
     <!----slide----------------------------------------------------------------------------------------->
 
 <body>
