--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                 Gosto de manter meu corpo em movivimento e me exercitar sempre que possível e viajar sempre que tenho oportunidade. Viajar permite que você^entre em contato com novas culturas, tradiçoes e modos de vida. Isso expande seus horizontes, ajuda a desenvolver a tolerância e a empatia e possibilita uma visão mais ampla do mundo.
             </p>
             </div>
+            
+            <div class="container">
             <div class="sobre_info">
                 <p><i class="fa-solid fa-calendar-days"></i>Aniversário: 05 mar</p>
                 <p><i class="fa-sharp fa-solid fa-laptop-code"></i>Freelance: disponível</p>
@@ -114,6 +116,7 @@
                 <p><i class="fa-solid fa-phone-volume"></i>Telefone: +99 9999-9999</p>
                 <p><i class="fa-solid fa-envelope"></i>Email: engproducao.eliane@gmail.com</p>
              </div>
+        </div>
         </div>
         </article>
     </main>
