--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <br>
                 Gosto de manter meu corpo em movivimento e me exercitar sempre que possível e viajar sempre que tenho oportunidade. Viajar permite que você^entre em contato com novas culturas, tradiçoes e modos de vida. Isso expande seus horizontes, ajuda a desenvolver a tolerância e a empatia e possibilita uma visão mais ampla do mundo.
             </p>
+                <br>
             </div>
             
             <div class="container">
@@ -120,6 +121,7 @@
         </div>
         </article>
     </main>
+    <br>
     <!------------------------------------------------------->
           <div class="container">
     <section class="services">
@@ -176,6 +178,8 @@
           </div>
 <!----------------------------------------------------------------------->  
                       <div class="my_resume">
+                                    <div class="container">
+
 <div class="sobre_titulo">
 
         <h1 id="Motiva"> O que me motiva</h1>
@@ -191,6 +195,7 @@
             <span></span>
         </div>
         </div>
+                                        </div>
     </div>
     <script src="script.js"></script>
     <!----slide----------------------------------------------------------------------------------------->
